reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft.PowerShell.Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: zh-CN
ms.lasthandoff: 10/07/2020
ms.locfileid: "93199535"
---
# <span data-ttu-id="a4385-103">Microsoft.PowerShell.Core 模块</span><span class="sxs-lookup"><span data-stu-id="a4385-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="a4385-104">说明</span><span class="sxs-lookup"><span data-stu-id="a4385-104">Description</span></span>

<span data-ttu-id="a4385-105">本部分包含随 PowerShell Microsoft Core 模块一起安装的 cmdlet 的帮助主题。</span><span class="sxs-lookup"><span data-stu-id="a4385-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="a4385-106">核心模块包含用于管理 PowerShell 的基本功能的 cmdlet 和提供程序。</span><span class="sxs-lookup"><span data-stu-id="a4385-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="a4385-107">Microsoft PowerShell Cmdlet</span><span class="sxs-lookup"><span data-stu-id="a4385-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="a4385-108">Add-History</span><span class="sxs-lookup"><span data-stu-id="a4385-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="a4385-109">向会话历史记录附加条目。</span><span class="sxs-lookup"><span data-stu-id="a4385-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="a4385-110">Clear-History</span><span class="sxs-lookup"><span data-stu-id="a4385-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="a4385-111">从 PowerShell 会话命令历史记录中删除条目。</span><span class="sxs-lookup"><span data-stu-id="a4385-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="a4385-112">Clear-Host</span><span class="sxs-lookup"><span data-stu-id="a4385-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="a4385-113">清除主机程序中的显示内容。</span><span class="sxs-lookup"><span data-stu-id="a4385-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="a4385-114">Connect-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="a4385-115">重新连接到已断开连接的会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="a4385-116">Debug-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="a4385-117">调试正在运行的后台工作流作业。</span><span class="sxs-lookup"><span data-stu-id="a4385-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="a4385-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="a4385-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="a4385-119">在启动 PowerShell 的新实例时禁用实验功能。</span><span class="sxs-lookup"><span data-stu-id="a4385-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="a4385-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="a4385-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="a4385-121">阻止 PowerShell 终结点接收远程连接。</span><span class="sxs-lookup"><span data-stu-id="a4385-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="a4385-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a4385-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="a4385-123">禁用本地计算机上的会话配置。</span><span class="sxs-lookup"><span data-stu-id="a4385-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="a4385-124">Disconnect-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="a4385-125">断开与会话的连接。</span><span class="sxs-lookup"><span data-stu-id="a4385-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="a4385-126">Enable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="a4385-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="a4385-127">启动新的 PowerShell 实例时启用实验性功能。</span><span class="sxs-lookup"><span data-stu-id="a4385-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="a4385-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="a4385-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="a4385-129">将计算机配置为接收远程命令。</span><span class="sxs-lookup"><span data-stu-id="a4385-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="a4385-130">Enable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a4385-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="a4385-131">启用本地计算机上的会话配置。</span><span class="sxs-lookup"><span data-stu-id="a4385-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="a4385-132">Enter-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="a4385-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="a4385-133">连接到并进入与本地进程的交互会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="a4385-134">Enter-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="a4385-135">启动与远程计算机的交互式会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="a4385-136">Exit-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="a4385-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="a4385-137">关闭包含本地进程的交互式会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="a4385-138">Exit-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="a4385-139">结束与远程计算机的交互式会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="a4385-140">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="a4385-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="a4385-141">指定要导出的模块成员。</span><span class="sxs-lookup"><span data-stu-id="a4385-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="a4385-142">ForEach-Object</span><span class="sxs-lookup"><span data-stu-id="a4385-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="a4385-143">针对输入对象集合中的每个项执行操作。</span><span class="sxs-lookup"><span data-stu-id="a4385-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="a4385-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="a4385-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="a4385-145">获取所有命令。</span><span class="sxs-lookup"><span data-stu-id="a4385-145">Gets all commands.</span></span>

### [<span data-ttu-id="a4385-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="a4385-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="a4385-147">获取实验性功能。</span><span class="sxs-lookup"><span data-stu-id="a4385-147">Gets experimental features.</span></span>

### [<span data-ttu-id="a4385-148">Get-Help</span><span class="sxs-lookup"><span data-stu-id="a4385-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="a4385-149">显示有关 PowerShell 命令和概念的信息。</span><span class="sxs-lookup"><span data-stu-id="a4385-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="a4385-150">Get-History</span><span class="sxs-lookup"><span data-stu-id="a4385-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="a4385-151">获取在当前会话过程中输入的命令列表。</span><span class="sxs-lookup"><span data-stu-id="a4385-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="a4385-152">Get-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="a4385-153">获取当前会话中正在运行的 PowerShell 后台作业。</span><span class="sxs-lookup"><span data-stu-id="a4385-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="a4385-154">Get-Module</span><span class="sxs-lookup"><span data-stu-id="a4385-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="a4385-155">获取已导入或可导入到当前会话的模块。</span><span class="sxs-lookup"><span data-stu-id="a4385-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="a4385-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="a4385-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="a4385-157">获取有关 PowerShell 主机的进程信息。</span><span class="sxs-lookup"><span data-stu-id="a4385-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="a4385-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="a4385-159">获取本地和远程计算机上的 PowerShell 会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="a4385-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="a4385-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="a4385-161">获取受约束的会话配置上的特定用户的功能。</span><span class="sxs-lookup"><span data-stu-id="a4385-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="a4385-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a4385-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="a4385-163">获取计算机上已注册的会话配置。</span><span class="sxs-lookup"><span data-stu-id="a4385-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="a4385-164">Import-Module</span><span class="sxs-lookup"><span data-stu-id="a4385-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="a4385-165">将模块添加到当前会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="a4385-166">Invoke-Command</span><span class="sxs-lookup"><span data-stu-id="a4385-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="a4385-167">在本地和远程计算机上运行命令。</span><span class="sxs-lookup"><span data-stu-id="a4385-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="a4385-168">Invoke-History</span><span class="sxs-lookup"><span data-stu-id="a4385-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="a4385-169">从会话历史记录中运行命令。</span><span class="sxs-lookup"><span data-stu-id="a4385-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="a4385-170">New-Module</span><span class="sxs-lookup"><span data-stu-id="a4385-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="a4385-171">创建一个仅存在于内存中的新动态模块。</span><span class="sxs-lookup"><span data-stu-id="a4385-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="a4385-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="a4385-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="a4385-173">创建新的模块清单。</span><span class="sxs-lookup"><span data-stu-id="a4385-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="a4385-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="a4385-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="a4385-175">创建一个文件，该文件定义要通过会话配置公开的一组功能。</span><span class="sxs-lookup"><span data-stu-id="a4385-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="a4385-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="a4385-177">创建与本地或远程计算机的持续性连接。</span><span class="sxs-lookup"><span data-stu-id="a4385-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="a4385-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="a4385-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="a4385-179">创建用于定义会话配置的文件。</span><span class="sxs-lookup"><span data-stu-id="a4385-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="a4385-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="a4385-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="a4385-181">创建一个包含 PSSession 高级选项的对象。</span><span class="sxs-lookup"><span data-stu-id="a4385-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="a4385-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="a4385-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="a4385-183">创建包含用于会话配置的高级选项的对象。</span><span class="sxs-lookup"><span data-stu-id="a4385-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="a4385-184">Out-Default</span><span class="sxs-lookup"><span data-stu-id="a4385-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="a4385-185">将输出发送到默认的格式化程序和默认的输出 cmdlet。</span><span class="sxs-lookup"><span data-stu-id="a4385-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="a4385-186">Out-Host</span><span class="sxs-lookup"><span data-stu-id="a4385-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="a4385-187">将输出发送到命令行。</span><span class="sxs-lookup"><span data-stu-id="a4385-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="a4385-188">Out-Null</span><span class="sxs-lookup"><span data-stu-id="a4385-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="a4385-189">隐藏输出，而不是将其向下发送或显示。</span><span class="sxs-lookup"><span data-stu-id="a4385-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="a4385-190">Receive-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="a4385-191">获取当前会话中 PowerShell 后台作业的结果。</span><span class="sxs-lookup"><span data-stu-id="a4385-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="a4385-192">Receive-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="a4385-193">获取断开连接的会话中的命令的结果</span><span class="sxs-lookup"><span data-stu-id="a4385-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="a4385-194">Register-ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="a4385-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="a4385-195">注册自定义参数其完成注册。</span><span class="sxs-lookup"><span data-stu-id="a4385-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="a4385-196">Register-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a4385-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="a4385-197">创建并注册新的会话配置。</span><span class="sxs-lookup"><span data-stu-id="a4385-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="a4385-198">Remove-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="a4385-199">删除 PowerShell 后台作业。</span><span class="sxs-lookup"><span data-stu-id="a4385-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="a4385-200">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="a4385-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="a4385-201">删除当前会话中的模块。</span><span class="sxs-lookup"><span data-stu-id="a4385-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="a4385-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="a4385-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="a4385-203"> (Pssession) 关闭一个或多个 PowerShell 会话。</span><span class="sxs-lookup"><span data-stu-id="a4385-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="a4385-204">Save-Help</span><span class="sxs-lookup"><span data-stu-id="a4385-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="a4385-205">下载最新的帮助文件，并将其保存到文件系统目录。</span><span class="sxs-lookup"><span data-stu-id="a4385-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="a4385-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="a4385-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="a4385-207">启用和禁用脚本调试功能、设置跟踪级别和切换严格模式。</span><span class="sxs-lookup"><span data-stu-id="a4385-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="a4385-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a4385-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="a4385-209">更改已注册会话配置的属性。</span><span class="sxs-lookup"><span data-stu-id="a4385-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="a4385-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="a4385-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="a4385-211">建立并强制执行表达式、脚本和脚本块中的编码规则。</span><span class="sxs-lookup"><span data-stu-id="a4385-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="a4385-212">Start-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="a4385-213">启动 PowerShell 后台作业。</span><span class="sxs-lookup"><span data-stu-id="a4385-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="a4385-214">Stop-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="a4385-215">停止 PowerShell 后台作业。</span><span class="sxs-lookup"><span data-stu-id="a4385-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="a4385-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="a4385-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="a4385-217">验证模块清单文件是否准确描述了模块的内容。</span><span class="sxs-lookup"><span data-stu-id="a4385-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="a4385-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="a4385-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="a4385-219">验证会话配置文件中的键和值。</span><span class="sxs-lookup"><span data-stu-id="a4385-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="a4385-220">Unregister-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="a4385-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="a4385-221">从计算机中删除已注册的会话配置。</span><span class="sxs-lookup"><span data-stu-id="a4385-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="a4385-222">Update-Help</span><span class="sxs-lookup"><span data-stu-id="a4385-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="a4385-223">在计算机上下载和安装最新的帮助文件。</span><span class="sxs-lookup"><span data-stu-id="a4385-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="a4385-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="a4385-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="a4385-225">禁止显示命令提示符，直到在会话中运行的一个或所有 PowerShell 后台作业完成。</span><span class="sxs-lookup"><span data-stu-id="a4385-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="a4385-226">Where-Object</span><span class="sxs-lookup"><span data-stu-id="a4385-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="a4385-227">根据属性值从集合中选择对象。</span><span class="sxs-lookup"><span data-stu-id="a4385-227">Selects objects from a collection based on their property values.</span></span>
